regression/fail/equal.sml
val op = = ()

val rec (op =) = fn _ => 13
